# igrf

./: .appveyor.yml  .codeclimate.yml  .coveragerc  .gitignore  .gitmodules  .mypy.ini  .travis.yml  CMakeLists.txt  DemoIGRF.py  MANIFEST.in  README.md  README.rst  RunIGRF.py  demo_igrf.py  demo_igrf12.py  igrf.m  igrf11_demoprog.f  igrf12.m  igrf13.m  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.cmake  setup.m  setup.py
+igrf/: TestUnit.m  igrf.m  test_unit.m
+igrf/private/: xarray2mat.m
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
fortran/: CMakeLists.txt  igrf12.f
fortrancode/: igrf11.f  igrf11_demoprog.f  igrf12.f  igrf12_demoprog.f
igrf12/: __init__.py  base.py  plots.py  utils.py
igrf12py/: __init__.py  igrf12fun.py
igrf13/: __init__.py  base.py
pyigrf12/: __init__.py  plots.py
reference/: sample_out_IGRF12.txt  sample_out_WMM2015.txt
src/: CMakeLists.txt  geomag70.c  igrf11.f  igrf11_driver.f  igrf12.f  igrf12_driver.f  igrf13.f  igrf13_demoprog.f  igrf_driver.f90  meson.build
src/igrf/: CMakeLists.txt  __init__.py  __main__.py  base.py  plots.py  setup.cmake  utils.py
src/igrf/fortran/: geomag70.c  igrf11.f  igrf13.f  igrf13_driver.f90  igrf13_legacy.f
src/igrf/tests/: test_mod.py
tests/: test.py  test_all.py  test_mod.py
