[metadata]
name = igrf12
version = 1.3.4
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = IGRF12 model with simple object-oriented Python interface.
url = https://github.com/scivision/igrf12
keywords =
  geomagnetic
  igrf
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  xarray
  numpy
  sciencedates

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib

[options.entry_points]
console_scripts =
  igrf12 = RunIGRF:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */sciencedates/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
