[metadata]
name = igrf12
version = 1.3.4
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = IGRF12 model with simple object-oriented Python interface.
url = https://github.com/space-physics/igrf12
keywords =
  geomagnetic
  igrf
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  xarray
  numpy
  sciencedates

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib

[options.entry_points]
console_scripts =
