[metadata]
name = igrf
version = 13.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = IGRF13, IGRF12, IGRF11 models with simple object-oriented Python interface.
url = https://github.com/space-physics/igrf
keywords =
  geomagnetic
  igrf
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  xarray
  numpy
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
